--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "vercel-build": "npm run prepare && next build"
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
